--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "test-watch": "nodemon --exec \"npm test\""
   },
   "engines": {
-    "node":"8.2.1"
+    "node": "8.2.1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.15.4",
+    "jsonwebtoken": "^7.4.3",
     "lodash": "^4.17.4",
     "mongodb": "^2.2.31",
-    "mongoose": "^4.11.9"
+    "mongoose": "^4.11.9",
+    "validator": "^8.1.0"
   },
   "devDependencies": {
     "expect": "^1.20.2",
